@@ -34,6 +34,12 @@ context "Database#connect" do
   end
 end
 
+context "Database#disconnect" do
+  specify "should raise NotImplementedError" do
+    proc {Sequel::Database.new.disconnect}.should raise_error(NotImplementedError)
+  end
+end
+
 context "Database#uri" do
   setup do
     @c = Class.new(Sequel::Database) do
